--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: splash
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
-  overlay_image: https://mmistakes.github.io/minimal-mistakes/assets/images/unsplash-image-1.jpg
+  overlay_image: /assets/images/JWH_7323_cropped1280.jpg
 feature_row:
   - image_path: https://mmistakes.github.io/minimal-mistakes/assets/images/unsplash-gallery-image-1-th.jpg
     alt: "placeholder image 1"
