--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,6 @@
 ---
 layout: splash
+excerpt: "This post should display a **header with a solid background color**, if the theme supports it."
 header:
-  overlay_color: "#0F0"
-  overlay_filter: "0.5"
-  overlay_image: /assets/images/unsplash-image-1.jpg
-  actions:
-    - label: "Download"
-      url: "https://github.com/mmistakes/minimal-mistakes/"
-  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  overlay_color: "#3f3"
 ---
