--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,10 @@
 ---
 layout: splash
-excerpt: "This post should display a **header with a solid background color**, if the theme supports it."
+excerpt: "This post should display a header with an overlay image, if the theme supports it."
 header:
-  overlay_color: "#3f3"
+  overlay_image: /assets/images/strawberrymischief1280.jpg
+  caption: "Photo credit: [June 2022](https://unsplash.com)"
+  actions:
+    - label: "More Info"
+      url: "https://unsplash.com"
 ---
